assets/css/styles.css
:root {
    --bg-color: rgba(44, 75, 144, 1);
    --bg-color-2:  rgba(75, 142, 196, 0.7);
    --bg-color-3: rgba(30, 30, 30, 1);
    --main-text-color: rgba(252, 252, 252, 0.692);
    --secondary-text-color: rgba();
}


body {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
}

header {
    text-align: center;
    background-color: var(--bg-color);
    margin: 0 -10px;
    padding: 30px 0;
}

nav {
    display: flex;
    margin: 0 -10px;
    background-color: var(--bg-color);
    flex-direction: row;
    justify-content: flex-end;
}

nav a {
    background-color: var(--bg-color-2);
    padding: 20px 15px;
    margin: 0 2px;
}

.hero-image {
    background-image: url(../images/hero.png);
    height: 300px;
    filter: contrast(1);
    background-position: center;
    background-size: cover;
    margin: 0 -10px;
}
.hero-text {
    display: flex;
    flex-direction: column;
}

.hero-text h1{
    position: relative;
    flex: 1 1;
    font-size: 60px;
    color: var(--main-text-color);
    margin: 10px;
    text-align: center;
}

.hero-text p {
    position: relative;
    flex: 1 1;
    font-size: 30px;
    color: var(--main-text-color);
    text-align: center;
    margin: 10px;
}

main {
    display: flex;
}

.left {
    width: 25%;
    border-style: dotted dotted dotted none;
    border-width: 4px;
    padding: 0 15px;
    background-color: var(--bg-color-3);
    color: var(--main-text-color);
}

.projects {
    display: flex;
    flex-direction: column;
    width: 75%;
    align-items: center;
    background-color: var(--bg-color-3);
    border-style: dotted none;
    border-color: var(--main-text-color);
    border-width: 4px;
}

.maincard {
    width: 80%;
    height: 400px;
    margin: 15px 20px;
    background-color: var(--bg-color);
}

.cards{
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

.card {
    width: 400px;
    height: 200px;
    margin: 10px 15px;
    background-color: var(--bg-color);
}

footer {
    display: flex;
    flex-direction: row;
    background-color: var(--bg-color);
    margin: 0 -10px;
    padding: 30px 0;
}

footer p {
    margin: 0 10px;
}

